# jed-bytecode

./: Cargo.toml  README.md  byc.jbc  fib.jbc  fiblist.jed  fizzbuzz.jbc  perf.data  perf.data.old  test.py  testbytecode.jed
benches/: benchmark.rs
examples/: dofortest.jed  fib.jbc  fib.jed  fiblist.jbc  fiblist.jed  fizzbuzz-iterate.jed  fizzbuzz.jbc  fizzbuzz.jed  fizzbuzz.py  helloworld.jbc  helloworld.jed  iter.jed  listpushtest.jed  pow.jed  sieve.jed
src/: binops.rs  builtin.rs  error.rs  frame.rs  indexmap.rs  lib.ignore  lib.rs  literal.rs  main.rs  map.rs  mutable.rs  object.rs  operation.rs  program.rs  span.rs  stack.rs  stack.rs.vec  utils.rs  vm.rs
src/arena/: chunk.rs  dropless.rs  manual.rs  mod.rs
src/file/: json.rs  mod.rs  saveable.rs
src/modules/: mod.rs  socket.rs
