[package]
name = "jed"
version = "0.3.0"

[lints.clippy]
pedantic = "warn"

[profile.dev]
opt-level = 0 # results in ~1 second times for recursiev fib
# opt-level = 1

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
lexopt = "0.3.1"

[[bench]]
name = "benchmark"
harness = false

[dev-dependencies]
criterion = "0.5.1"
